--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -133,3 +133,4 @@ obj-$(CONFIG_VIRT_DRIVERS)	+= virt/
 obj-$(CONFIG_HYPERV)		+= hv/
 
 obj-$(CONFIG_PM_DEVFREQ)	+= devfreq/
+obj-$(CONFIG_PFE_CTRL)                += pfe_ctrl/
