--- a/synoconfigs/Kconfig
+++ b/synoconfigs/Kconfig
@@ -23,13 +23,6 @@ config SYNO_QORIQ_IGNORE_DEFAULT_GATEWAY_ARP
 	help
 	  Say Y here to support ignoring default gateway's ARP packet.
 
-config SYNO_QORIQ_DISABLE_KMSG_BEFORE_SYSSLEEP
-	bool "Disable /proc/kmsg to prevent disk wakeup before system deepsleep, see bug <DSM> #55224"
-	depends on SYNO_QORIQ
-	default y
-	help
-	  Say Y here to disable /proc/kmsg to prevent disk wakeup before system deepsleep, see bug <DSM> #55224
-
 config SYNO_QORIQ_FIX_OCF_RACE
 	bool "fix ocf race"
 	depends on SYNO_QORIQ
@@ -65,6 +58,12 @@ config SYNO_NET_INIT_OPERATION
 	help
 	  Say Y here to fix this issue. Please not port this to new kernel
 
+config SYNO_IGNORE_NETBIOS_BROADCAST
+	default y
+	bool "Export syno_ignore_netbios_broadcast to /proc"
+	depends on GIANFAR && SYNO_QORIQ
+	help
+	  Selecting this option enables wake by NetBIOS broadcast
 
 config SYNO_MPC8533_TIMEBASE_FREQ
     int "PPC853x Timebase frequency"
