--- a/arch/arm/kernel/Makefile
+++ b/arch/arm/kernel/Makefile
@@ -52,5 +52,6 @@ endif
 
 head-y			:= head$(MMUEXT).o
 obj-$(CONFIG_DEBUG_LL)	+= debug.o
+obj-$(CONFIG_SYNO_EARLY_PRINT)	+= debug.o
 
 extra-y := $(head-y) init_task.o vmlinux.lds
